fix navbar alignment with bg-img

--- a/src/scss/_custom-scss.scss
+++ b/src/scss/_custom-scss.scss
@@ -523,6 +523,7 @@ header, section {
         .__navbar {
             position: absolute;
             top: 0;
+            left: 0;
             width: 100%;
             background-color: var(--hbc-white);
             
